--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,15 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+path = "src/wasm/wasm_lib.rs"
+
+[[bin]]
+name = "native"
+path = "src/main.rs"
+
 [dependencies]
 rand = "0.3.14"
 nom = "6.0.0"
+wasm-bindgen = ""
