--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [lib]
 crate-type = ["cdylib"]
-path = "src/wasm/wasm_lib.rs"
+path = "src/wasm_lib.rs"
 
 [[bin]]
 name = "native"
@@ -17,4 +17,5 @@ path = "src/main.rs"
 [dependencies]
 rand = "0.3.14"
 nom = "6.0.0"
-wasm-bindgen = ""
+wasm-bindgen = "0.2"
+serde = "1.0"
