--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,13 @@ path = "src/main.rs"
 rand = "0.3.14"
 nom = "6.0.0"
 wasm-bindgen = "0.2"
-serde = "1.0"
+
+# https://serde.rs/feature-flags.html
+serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
+
+# wasm-opt: Exported global cannot be mutable · Issue #886 · rustwasm/wasm-pack · GitHub
+# https://github.com/rustwasm/wasm-pack/issues/886
+# https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Oz", "--enable-mutable-globals"]
