--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,14 @@ name = "orgmd_parser"
 version = "0.1.0"
 authors = ["okeysea <okeysea000@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/okeysea/orgmd_parser"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-crate-type = ["cdylib"]
-path = "src/wasm_lib.rs"
+
+#[lib]
+#crate-type = ["cdylib"]
+#path = "src/wasm_lib.rs"
 
 [[bin]]
 name = "native"
@@ -22,6 +24,13 @@ wasm-bindgen = "0.2"
 # https://serde.rs/feature-flags.html
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+criterion = "0.3.4"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
 
 # wasm-opt: Exported global cannot be mutable · Issue #886 · rustwasm/wasm-pack · GitHub
 # https://github.com/rustwasm/wasm-pack/issues/886
