--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -13,6 +13,7 @@ harness = false
 
 [dependencies]
 nom = "6.0.0"
+log = "0.4"
 
 # https://serde.rs/feature-flags.html
 serde = { version = "1.0", features = ["derive", "rc"] }
